added parmas as heading

--- a/genratepdf.html
+++ b/genratepdf.html
@@ -2,15 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>PDF Generator</title>
+    <title>Dynamic PDF Generator</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 20px;
+      }
+      h3 {
+        margin-bottom: 5px;
+      }
+      input {
+        padding: 8px;
+        width: 300px;
+        margin-bottom: 15px;
+        display: block;
+      }
+      button {
+        padding: 10px 20px;
+        font-size: 16px;
+      }
+    </style>
   </head>
   <body>
-    <h1>PDF Generator from URL</h1>
+    <h1>PDF Generator from URL Params</h1>
+    <div id="form-container"></div>
+
     <button onclick="generatePDF()">Generate PDF</button>
 
     <script>
-      // Parse URL parameters into a JS object
+      // Parse URL parameters
       function getParams() {
         const params = new URLSearchParams(window.location.search);
         const data = {};
@@ -20,19 +41,43 @@
         return data;
       }
 
+      // Create input fields from params
+      function buildForm(data) {
+        const container = document.getElementById("form-container");
+        for (const [key, value] of Object.entries(data)) {
+          const heading = document.createElement("h3");
+          heading.textContent = key;
+
+          const input = document.createElement("input");
+          input.type = "text";
+          input.value = value;
+          input.id = `input-${key}`;
+
+          container.appendChild(heading);
+          container.appendChild(input);
+        }
+      }
+
+      // Generate PDF with input values
       async function generatePDF() {
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF();
-        const data = getParams();
 
+        const inputs = document.querySelectorAll("input");
         let y = 10;
-        for (const [key, value] of Object.entries(data)) {
-          doc.text(`${key}: ${value}`, 10, y);
+        inputs.forEach((input) => {
+          const label = input.previousSibling.textContent;
+          const value = input.value;
+          doc.text(`${label}: ${value}`, 10, y);
           y += 10;
-        }
+        });
 
         doc.save("user_data.pdf");
       }
+
+      // Run on page load
+      const params = getParams();
+      buildForm(params);
     </script>
   </body>
 </html>
