--- a/genratepdf.html
+++ b/genratepdf.html
@@ -2,36 +2,88 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Dynamic PDF Generator</title>
+    <title>Generate PDF from URL Data</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
+        font-family: "Inter", sans-serif;
+        background: #f5f7fa;
+        margin: 0;
+        padding: 40px 20px;
+        display: flex;
+        justify-content: center;
       }
-      h3 {
-        margin-bottom: 5px;
+
+      .container {
+        background: #fff;
+        padding: 30px;
+        border-radius: 16px;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+        width: 100%;
+        max-width: 500px;
       }
-      input {
-        padding: 8px;
-        width: 300px;
-        margin-bottom: 15px;
+
+      h1 {
+        font-size: 24px;
+        margin-bottom: 30px;
+        text-align: center;
+        color: #333;
+      }
+
+      label {
         display: block;
+        margin-top: 20px;
+        font-weight: 600;
+        color: #444;
       }
-      button {
-        padding: 10px 20px;
+
+      input {
+        width: 100%;
+        padding: 10px 12px;
+        margin-top: 8px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
         font-size: 16px;
+        transition: border-color 0.3s ease;
+      }
+
+      input:focus {
+        border-color: #007bff;
+        outline: none;
+      }
+
+      button {
+        margin-top: 30px;
+        width: 100%;
+        padding: 12px;
+        font-size: 16px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+      }
+
+      button:hover {
+        background-color: #0056b3;
       }
     </style>
   </head>
   <body>
-    <h1>PDF Generator from URL Params</h1>
-    <div id="form-container"></div>
-
-    <button onclick="generatePDF()">Generate PDF</button>
+    <div class="container">
+      <h1>PDF Generator</h1>
+      <form id="pdf-form">
+        <div id="form-container"></div>
+        <button type="button" onclick="generatePDF()">Download PDF</button>
+      </form>
+    </div>
 
     <script>
-      // Parse URL parameters
       function getParams() {
         const params = new URLSearchParams(window.location.search);
         const data = {};
@@ -41,30 +93,28 @@
         return data;
       }
 
-      // Create input fields from params
       function buildForm(data) {
         const container = document.getElementById("form-container");
         for (const [key, value] of Object.entries(data)) {
-          const heading = document.createElement("h3");
-          heading.textContent = key;
+          const label = document.createElement("label");
+          label.textContent = key;
 
           const input = document.createElement("input");
           input.type = "text";
           input.value = value;
           input.id = `input-${key}`;
 
-          container.appendChild(heading);
+          container.appendChild(label);
           container.appendChild(input);
         }
       }
 
-      // Generate PDF with input values
       async function generatePDF() {
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF();
-
-        const inputs = document.querySelectorAll("input");
+        const inputs = document.querySelectorAll("#form-container input");
         let y = 10;
+
         inputs.forEach((input) => {
           const label = input.previousSibling.textContent;
           const value = input.value;
@@ -75,7 +125,7 @@
         doc.save("user_data.pdf");
       }
 
-      // Run on page load
+      // On page load
       const params = getParams();
       buildForm(params);
     </script>
