--- a/genratepdf.html
+++ b/genratepdf.html
@@ -2,57 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Generate PDF from URL Data</title>
+    <title>PDF Generator</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <style>
+      :root {
+        --bg: #f5f7fa;
+        --card: #ffffff;
+        --text: #222;
+        --input: #f0f2f5;
+        --border: #ccc;
+        --primary: #007bff;
+      }
+
+      [data-theme="dark"] {
+        --bg: #121212;
+        --card: #1f1f1f;
+        --text: #f1f1f1;
+        --input: #2a2a2a;
+        --border: #333;
+        --primary: #3399ff;
+      }
+
       body {
         font-family: "Inter", sans-serif;
-        background: #f5f7fa;
+        background: var(--bg);
+        color: var(--text);
         margin: 0;
         padding: 40px 20px;
         display: flex;
         justify-content: center;
+        transition: background 0.3s, color 0.3s;
       }
 
       .container {
-        background: #fff;
+        background: var(--card);
         padding: 30px;
         border-radius: 16px;
         box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
         width: 100%;
         max-width: 500px;
+        position: relative;
       }
 
       h1 {
         font-size: 24px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         text-align: center;
-        color: #333;
       }
 
       label {
         display: block;
         margin-top: 20px;
         font-weight: 600;
-        color: #444;
       }
 
       input {
         width: 100%;
         padding: 10px 12px;
         margin-top: 8px;
-        border: 1px solid #ccc;
+        border: 1px solid var(--border);
+        background: var(--input);
         border-radius: 8px;
         font-size: 16px;
-        transition: border-color 0.3s ease;
+        color: var(--text);
       }
 
       input:focus {
-        border-color: #007bff;
+        border-color: var(--primary);
         outline: none;
       }
 
@@ -61,7 +81,7 @@
         width: 100%;
         padding: 12px;
         font-size: 16px;
-        background-color: #007bff;
+        background-color: var(--primary);
         color: white;
         border: none;
         border-radius: 8px;
@@ -72,10 +92,43 @@
       button:hover {
         background-color: #0056b3;
       }
+
+      .dark-toggle {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        font-size: 14px;
+        color: var(--primary);
+        background: none;
+        border: none;
+      }
+
+      .toast {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: var(--primary);
+        color: white;
+        padding: 10px 16px;
+        border-radius: 8px;
+        display: none;
+        font-size: 14px;
+      }
+
+      @media (max-width: 480px) {
+        button {
+          position: sticky;
+          bottom: 0;
+          z-index: 2;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="container">
+      <button class="dark-toggle" onclick="toggleTheme()">Toggle Dark</button>
       <h1>PDF Generator</h1>
       <form id="pdf-form">
         <div id="form-container"></div>
@@ -83,18 +136,21 @@
       </form>
     </div>
 
+    <div class="toast" id="toast">PDF downloaded successfully!</div>
+
     <script>
-      function getParams() {
+      const getParams = () => {
         const params = new URLSearchParams(window.location.search);
         const data = {};
         for (const [key, value] of params.entries()) {
-          data[key] = value;
+          data[key] = decodeURIComponent(value);
         }
         return data;
-      }
+      };
 
-      function buildForm(data) {
+      const buildForm = (data) => {
         const container = document.getElementById("form-container");
+        let first = true;
         for (const [key, value] of Object.entries(data)) {
           const label = document.createElement("label");
           label.textContent = key;
@@ -103,29 +159,60 @@
           input.type = "text";
           input.value = value;
           input.id = `input-${key}`;
+          input.name = key;
+
+          if (first) {
+            input.autofocus = true;
+            first = false;
+          }
 
           container.appendChild(label);
           container.appendChild(input);
         }
-      }
+      };
 
-      async function generatePDF() {
+      const generatePDF = () => {
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF();
         const inputs = document.querySelectorAll("#form-container input");
         let y = 10;
+        let nameForFile = "user_data";
 
         inputs.forEach((input) => {
           const label = input.previousSibling.textContent;
-          const value = input.value;
-          doc.text(`${label}: ${value}`, 10, y);
+          const value = input.value.trim() || "N/A";
+          doc.setFont("helvetica", "bold");
+          doc.text(`${label}:`, 10, y);
+          doc.setFont("helvetica", "normal");
+          doc.text(`${value}`, 40, y);
           y += 10;
+
+          if (label.toLowerCase() === "name" && value !== "N/A") {
+            nameForFile = value.toLowerCase().replace(/\s+/g, "_");
+          }
         });
 
-        doc.save("user_data.pdf");
-      }
+        doc.save(`${nameForFile}_data.pdf`);
+        showToast();
+      };
 
-      // On page load
+      const showToast = () => {
+        const toast = document.getElementById("toast");
+        toast.style.display = "block";
+        setTimeout(() => {
+          toast.style.display = "none";
+        }, 2500);
+      };
+
+      const toggleTheme = () => {
+        const current = document.documentElement.getAttribute("data-theme");
+        document.documentElement.setAttribute(
+          "data-theme",
+          current === "dark" ? "light" : "dark"
+        );
+      };
+
+      // Run on load
       const params = getParams();
       buildForm(params);
     </script>
